--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
             <ul>
                 <li>
                     <span class="subtitle">homepage</span>
-                    <a href="#">HOME</a>
+                    <a href="index.html">HOME</a>
                 </li>
                 <li>
                     <span class="subtitle">who are we</span>
@@ -37,15 +37,15 @@
                 </li>
                 <li>
                     <span class="subtitle">my portfolio</span>
-                    <a href="#">projects</a>
+                    <a href="works.html">projects</a>
                 </li>
                 <li>
                     <span class="subtitle">latest news</span>
-                    <a href="#">blog</a>
+                    <a href="blog.html">blog</a>
                 </li>
                 <li>
                     <span class="subtitle">get in touch</span>
-                    <a href="#">contact</a>
+                    <a href="contact.html">contact</a>
                 </li>
             </ul>
             <button class="sidebarBtn">
@@ -63,7 +63,7 @@
                         <ul class="navigation-nav">
                             <li>
                                 <span class="subtitle">homepage</span>
-                                <a href="#">HOME</a>
+                                <a href="index.html">HOME</a>
                             </li>
                             <li>
                                 <span class="subtitle">who are we</span>
@@ -71,15 +71,15 @@
                             </li>
                             <li>
                                 <span class="subtitle">my portfolio</span>
-                                <a href="#">projects</a>
+                                <a href="works.html">projects</a>
                             </li>
                             <li>
                                 <span class="subtitle">latest news</span>
-                                <a href="#">blog</a>
+                                <a href="blog.html">blog</a>
                             </li>
                             <li>
                                 <span class="subtitle">get in touch</span>
-                                <a href="#">contact</a>
+                                <a href="contact.html">contact</a>
                             </li>
                         </ul>
                     </div>
