--- a/blog.html
+++ b/blog.html
@@ -23,12 +23,12 @@
     <!-- SIDEBAR -->
     <div class="sidebar">
         <div class="logo">
-            <a href="#"><img src="images/logo.png" alt="logo"></a>
+            <a href="index.html"><img src="images/logo.png" alt="logo"></a>
         </div>
         <ul>
             <li>
                 <span class="subtitle">homepage</span>
-                <a href="#">HOME</a>
+                <a href="index.html">HOME</a>
             </li>
             <li>
                 <span class="subtitle">who are we</span>
@@ -36,15 +36,15 @@
             </li>
             <li>
                 <span class="subtitle">my portfolio</span>
-                <a href="#">projects</a>
+                <a href="works.html">projects</a>
             </li>
             <li>
                 <span class="subtitle">latest news</span>
-                <a href="#">blog</a>
+                <a href="blog.html">blog</a>
             </li>
             <li>
                 <span class="subtitle">get in touch</span>
-                <a href="#">contact</a>
+                <a href="contact.html">contact</a>
             </li>
         </ul>
         <button class="sidebarBtn">
@@ -56,13 +56,13 @@
         <div class="container">
             <div class="header-container">
                 <div class="logo">
-                    <a href="#"><img src="images/logo.png" alt="logo"></a>
+                    <a href="index.html"><img src="images/logo.png" alt="logo"></a>
                 </div>
                 <div class="navigation-bar">
                     <ul class="navigation-nav">
                         <li>
                             <span class="subtitle">homepage</span>
-                            <a href="#">HOME</a>
+                            <a href="index.html">HOME</a>
                         </li>
                         <li>
                             <span class="subtitle">who are we</span>
@@ -70,15 +70,15 @@
                         </li>
                         <li>
                             <span class="subtitle">my portfolio</span>
-                            <a href="#">projects</a>
+                            <a href="works.html">projects</a>
                         </li>
                         <li>
                             <span class="subtitle">latest news</span>
-                            <a href="#">blog</a>
+                            <a href="blog.html">blog</a>
                         </li>
                         <li>
                             <span class="subtitle">get in touch</span>
-                            <a href="#">contact</a>
+                            <a href="contact.html">contact</a>
                         </li>
                     </ul>
                 </div>
